syntax = "proto3";
package zephyr.solo.io;
option go_package = "github.com/solo-io/mesh-projects/pkg/api/v1";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/status.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";

/*
MeshIngress represents a managed ingress (edge router) which can proxy connections
for services in a Mesh managed by SuperGloo
*/
message MeshIngress {

    option (core.solo.io.resource).short_name = "mi";
    option (core.solo.io.resource).plural_name = "meshingresses";

    // Status indicates the validation status of this resource.
    // Status is read-only by clients, and set by supergloo during validation
    core.solo.io.Status status = 1 [(gogoproto.nullable) = false, (gogoproto.moretags) = "testdiff:\"ignore\""];

    // Metadata contains the object metadata for this resource
    core.solo.io.Metadata metadata = 2 [(gogoproto.nullable) = false];

    message GlooIngress {
        // namespace which the ingress is located in.
        string namespace = 1;

        string service_name = 2;

        // name of port which will be used for mesh traffic.
        string port = 3;
    }

    oneof ingress_type {
        GlooIngress gloo = 3;
    }
}
